--- a/resources/contenttweaker/lang/zh_cn.lang
+++ b/resources/contenttweaker/lang/zh_cn.lang
@@ -8,9 +8,11 @@ tile.contenttweaker.ambient_block.name=云墨方块
 item.contenttweaker.puresi.name=高纯硅
 item.contenttweaker.crystalsi.name=单晶硅
 item.contenttweaker.glass_fragment.name=玻璃碎片
+item.contenttweaker.pig_iron_billet.name=生铁铁呸
 
 # Part
 contenttweaker.part.tiny_dust_icr=%s粉尘
+contenttweaker.part.hot_ingot=%s锭
 
 #Material
 base.material.cesium=铯
@@ -20,6 +22,8 @@ base.material.germanium=锗
 base.material.beryllium=铍
 base.material.zirconium=锆
 base.material.soldertin=焊锡
+base.material.hotcastediron=热铸铁
 base.material.adamantium=艾德曼合金
+base.material.hotwroughtiron=热锻铁
 base.material.stainlesstitanium=防锈钛
 base.material.berylliumaluminumalloy=铍铝合金
