完成部分炼钢 分化脚本 修复 MM 机器配方问题

--- a/.minecraft/resources/contenttweaker/lang/en_us.lang
+++ b/.minecraft/resources/contenttweaker/lang/en_us.lang
@@ -6,6 +6,7 @@ tile.contenttweaker.ambient_block.name=Ambient Block
 
 # Item
 item.contenttweaker.puresi.name=High-curity Silicon
+item.contenttweaker.middle_item.name=
 item.contenttweaker.glass_fragment.name=Glass Fragment
 item.contenttweaker.pig_iron_billet.name=Pig Iron Billet
 item.contenttweaker.crystalsi.name=Mono-crystalline Silicon
