--- a/.minecraft/resources/isolated_crystal_remaker/lang/zh_cn.lang
+++ b/.minecraft/resources/isolated_crystal_remaker/lang/zh_cn.lang
@@ -1,9 +1,7 @@
 #事件
 icr.crafttweaker.event.lava=你已经用铁和燧石右键过烈焰网啦, 不能再次右键了。
 icr.crafttweaker.event.thaumometer.explode=想扫水绣球? 门都没有!
-
-#伤害
-death.attack.handHeldTable=小哥, 要不要苹果?
+icr.crafttweaker.event.handHeldTable=小哥, 要不要苹果?
 
 #机器
 tile.essences_materializer.name=元素实体化器
