--- a/.minecraft/resources/contenttweaker/lang/en_us.lang
+++ b/.minecraft/resources/contenttweaker/lang/en_us.lang
@@ -6,10 +6,13 @@ tile.contenttweaker.ambient_block.name=Ambient Block
 
 # Item
 item.contenttweaker.puresi.name=High-curity Silicon
-item.contenttweaker.middle_item.name=Middle Item
 item.contenttweaker.glass_fragment.name=Glass Fragment
 item.contenttweaker.pig_iron_billet.name=Pig Iron Billet
 item.contenttweaker.crystalsi.name=Mono-crystalline Silicon
+item.contenttweaker.intermediate_product.name=Intermediate Product
+
+# Fluid
+fluid.hot_steel=Hot Steel Fluid
 
 # Part
 contenttweaker.part.rotor=%s rotor
