--- a/.minecraft/resources/isolated_crystal_remaker/lang/zh_cn.lang
+++ b/.minecraft/resources/isolated_crystal_remaker/lang/zh_cn.lang
@@ -1,10 +1,17 @@
 #事件
-icr.crafttweaker.event.lava=你已经用铁和燧石右键过烈焰网啦, 不能再次右键了。
-icr.crafttweaker.event.thaumometer.explode=想扫水绣球? 门都没有!
-icr.crafttweaker.event.handHeldTable=小哥, 要不要苹果?
+icr.text.info.lava=你已经用铁和燧石右键过烈焰网啦, 不能再次右键了。
+icr.text.info.explode=想扫水绣球? 门都没有!
+icr.text.info.handHeldTable=小哥, 要不要苹果?
 
 #机器
 tile.essences_materializer.name=元素实体化器
 
 #JEI 配方
 requious.jei.recipe.essences_materializer=元素实体化器
+
+# 中间产物
+icr.tooltip.info.nothing=无
+icr.tooltip.info.state=状态 : %s
+icr.tooltip.info.only_quenching=已淬火
+icr.tooltip.info.only_tempering=已回火
+icr.localization.intermediate_product=%s的中间产物
