--- a/.minecraft/resources/contenttweaker/lang/zh_cn.lang
+++ b/.minecraft/resources/contenttweaker/lang/zh_cn.lang
@@ -7,9 +7,12 @@ tile.contenttweaker.ambient_block.name=云墨方块
 # 物品
 item.contenttweaker.puresi.name=高纯硅
 item.contenttweaker.crystalsi.name=单晶硅
-item.contenttweaker.middle_item.name=中间产物
 item.contenttweaker.glass_fragment.name=玻璃碎片
 item.contenttweaker.pig_iron_billet.name=生铁铁呸
+item.contenttweaker.intermediate_product.name=中间产物
+
+# 流体
+fluid.hot_steel=熔融热钢
 
 # 部件
 contenttweaker.part.rotor=%s转子
@@ -19,6 +22,7 @@ contenttweaker.part.tiny_dust_icr=%s粉尘
 contenttweaker.part.quenched_plate=淬火%s板
 
 # 材料
+base.material.steel=钢
 base.material.cesium=铯
 base.material.indium=铟
 base.material.titanium=钛
