ftbq lang processor changes (github action)

--- a/.minecraft/resources/ftbq/lang/en_us.lang
+++ b/.minecraft/resources/ftbq/lang/en_us.lang
@@ -52,3 +52,5 @@ icr.quests.fa57aa60.text.1=
 icr.quests.fa57aa60.text.2=
 icr.quests.ff7fb682.title=
 icr.quests.ff7fb682.text.1=
+
+herodotus.quests.40a6f1e7.title=请好好使用魔力水晶碎片噢
