更改 FTBQ 本地化

--- a/.minecraft/resources/ftbq/lang/zh_cn.lang
+++ b/.minecraft/resources/ftbq/lang/zh_cn.lang
@@ -52,4 +52,4 @@ icr.quests.fa57aa60.text.1=你可以用世界盐右键炼药锅获得坩埚
 icr.quests.fa57aa60.text.2=PS : 不建议把用来染色的坩埚转化成坩埚
 icr.quests.ff7fb682.title=能量转换
 icr.quests.ff7fb682.text.1=你可以使用魔力石板在这个方块上右键一下，它会消耗你 10000mana 并一分钟之后变成星能液
-herodotus.quests.40a6f1e7.title=请好好使用魔力水晶碎片噢
+icr.quests.40a6f1e7.title=请好好使用魔力水晶碎片噢
