修正本地化名和删除冗余文件

--- a/.minecraft/resources/contenttweaker/lang/zh_cn.lang
+++ b/.minecraft/resources/contenttweaker/lang/zh_cn.lang
@@ -9,7 +9,7 @@ item.contenttweaker.puresi.name=高纯硅
 item.contenttweaker.crystalsi.name=单晶硅
 item.contenttweaker.water_bowl.name=装水的碗
 item.contenttweaker.glass_fragment.name=玻璃碎片
-item.contenttweaker.pig_iron_billet.name=生铁铁呸
+item.contenttweaker.pig_iron_billet.name=生铁铁坯
 item.contenttweaker.intermediate_product.name=中间产物
 
 # 流体
