本地化 langkey 和修改 blockstate

--- a/.minecraft/resources/isolated_crystal_remaker/lang/en_us.lang
+++ b/.minecraft/resources/isolated_crystal_remaker/lang/en_us.lang
@@ -9,6 +9,9 @@ icr.text.info.crystal.aqua=
 icr.text.info.crystal.ordo=
 icr.text.info.crystal.perditio=
 
+# Info
+icr.recipe.info.sheep=Will Spawn sheep
+
 # damageSource
 death.attack.handHeldTable=Killed by a Crafting Table XD
 
