ftbq lang processor changes (github action)

--- a/.minecraft/resources/ftbq/lang/en_us.lang
+++ b/.minecraft/resources/ftbq/lang/en_us.lang
@@ -53,3 +53,19 @@ icr.quests.fa57aa60.text.2=
 icr.quests.ff7fb682.title=
 icr.quests.ff7fb682.text.1=
 icr.quests.40a6f1e7.title=
+
+icr.quests.9b4f53c6.title=一氧化碳的来源
+icr.quests.9b4f53c6.text.1=
+icr.quests.efd9b8b5.title=step one：煅烧铁矿石
+icr.quests.efd9b8b5.text.1=
+icr.quests.45c1bb3f.title=step two：锤锻
+icr.quests.45c1bb3f.text.1=
+icr.quests.2d19ac55.title=step four:回火
+icr.quests.2d19ac55.text.1=
+icr.quests.655ebf2c.title=大炼钢铁
+icr.quests.49e312cd.title=高炉
+icr.quests.49e312cd.text.1=
+icr.quests.69c62f46.title=模块化多方块
+icr.quests.69c62f46.text.1=
+icr.quests.cf558da6.title=step three:淬火
+icr.quests.cf558da6.text.1=
