--- a/.minecraft/resources/ftbq/lang/zh_cn.lang
+++ b/.minecraft/resources/ftbq/lang/zh_cn.lang
@@ -53,3 +53,19 @@ icr.quests.fa57aa60.text.2=PS : 不建议把用来染色的炼药锅转化为坩
 icr.quests.ff7fb682.title=能量转换
 icr.quests.ff7fb682.text.1=你可以使用魔力石板在这个方块上右键一下，它会消耗你 10000mana 并一分钟之后变成星能液
 icr.quests.40a6f1e7.title=请好好使用魔力水晶碎片噢
+
+icr.quests.9b4f53c6.title=一氧化碳的来源
+icr.quests.9b4f53c6.text.1=
+icr.quests.efd9b8b5.title=step one：煅烧铁矿石
+icr.quests.efd9b8b5.text.1=
+icr.quests.45c1bb3f.title=step two：锤锻
+icr.quests.45c1bb3f.text.1=
+icr.quests.2d19ac55.title=step four:回火
+icr.quests.2d19ac55.text.1=
+icr.quests.655ebf2c.title=大炼钢铁
+icr.quests.49e312cd.title=高炉
+icr.quests.49e312cd.text.1=
+icr.quests.69c62f46.title=模块化多方块
+icr.quests.69c62f46.text.1=
+icr.quests.cf558da6.title=step three:淬火
+icr.quests.cf558da6.text.1=
