ftbq lang processor changes (github action)

--- a/.minecraft/resources/ftbq/lang/en_us.lang
+++ b/.minecraft/resources/ftbq/lang/en_us.lang
@@ -69,3 +69,12 @@ icr.quests.69c62f46.title=模块化多方块
 icr.quests.69c62f46.text.1=
 icr.quests.cf558da6.title=step three:淬火
 icr.quests.cf558da6.text.1=
+
+icr.quests.544159c8.title=融合！
+icr.quests.544159c8.text.1=
+icr.quests.d9acb3dc.title=替罪羊
+icr.quests.d9acb3dc.text.1=
+icr.quests.900beff1.title=禁忌：人体炼成
+icr.quests.900beff1.text.1=
+icr.quests.ff6c656c.title=元素融合
+icr.quests.ff6c656c.text.1=
