--- a/.minecraft/resources/isolated_crystal_remaker/lang/en_us.lang
+++ b/.minecraft/resources/isolated_crystal_remaker/lang/en_us.lang
@@ -2,6 +2,7 @@
 icr.text.info.lava=You have used Iron and Flint right click over the Blaze Mesh, can not be right clicked again.
 icr.text.info.explode=Wanna scan Hydroangeas? There's no way!
 icr.text.info.handHeldTable=Hey bro, want an apple?
+icr.text.info.recipecompleted=Recipe is Conpleted.
 icr.text.info.crystal.aer=
 icr.text.info.crystal.terra=
 icr.text.info.crystal.ignis=
@@ -24,19 +25,3 @@ tile.fusion_table.name=Fusion Table
 requious.jei.recipe.essences_materializer=Essences Materializer
 requious.jei.recipe.essences_fusion=Essences Fusion
 requious.jei.recipe.fusion_table=Fusion Table
-
-# Intermediate Product
-icr.tooltip.info.nothing=None
-icr.tooltip.info.state=State: %s
-icr.tooltip.info.only_quenching=Quenched
-icr.tooltip.info.only_tempering=Tempered
-icr.localization.intermediate_product=Intermediate Product of %s
-
-# Multi Block Macine
-modularmachinery.casting_oven=Casting Oven
-modularmachinery.blast_furnace=Blast Furnace
-modularmachinery.quenching_tank=Quenching Tank
-modularmachinery.casting_furnace=Casting Furnace
-modularmachinery.tempering_furnace=Tempering Furnace
-modularmachinery.forging_hammer_machine=Forging Hammer Machine
-modularmachinery.carbon_monoxide_generator=Carbon Monoxide Generator
